--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -41,7 +41,14 @@
 				margin: 0 10px;
 			}
 
-			#news_content div p {
+			#news_content div{
+				color: #3E3E3E;
+				font-size: 15px;
+				letter-spacing: 1px;
+				line-height: 26px;
+				word-spacing: 28px;
+			}
+			#news_content div p{
 				color: #3E3E3E;
 				font-size: 15px;
 				letter-spacing: 1px;
@@ -59,6 +66,10 @@
 			}
 			#news_content div>p img{
 				margin-left: -32px;
+			}
+			img{
+				width: 100%;
+				height: auto;
 			}
 		</style>
 	</head>
