--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -220,8 +220,12 @@
 				if(flag) {
 					courseAtt.listData = [];
 				}
-				courseAtt.listData = courseAtt.listData.concat(data);
-				courseInfo.pageIndex++;
+				if(flag && data.length === 0) {
+					courseAtt.isAttended = 0;
+				} else {
+					courseAtt.listData = courseAtt.listData.concat(data);
+					courseInfo.pageIndex++;
+				}
 			}
 			mui.plusReady(function() {
 				//				mui("#course-att").pullRefresh().disablePullupToRefresh();
