--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -41,11 +41,11 @@
 				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
-			<a id="bottom-show" class="mui-tab-item" href="../show/show-home.html">
+			<a id="bottom-show" class="mui-tab-item" href="../show/show-home2.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">发现</span>
 			</a>
-			<a class="mui-tab-item" href="../micro-course/course-home.html">
+			<a class="mui-tab-item" href="../micro-course/course-home1.html">
 				<span class="mui-icon iconfont icon-class"></span>
 				<span class="mui-tab-label">微学</span>
 			</a>
