--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -30,6 +30,21 @@
 	</head>
 
 	<body style="background-color: white;">
+		<li v-for="(li,index) of listData" v-bind:class="['mui-table-view-cell']" v-on:tap="jumpToPage(li)" v-bind:id="li.TabId" v-bind:value="index">
+			<div v-bind:class="['course-container']">
+				<div v-bind:class="['img-container']">
+					<img v-bind:class="['course-img']" v-bind:src="li.CoursePic" />
+					<span v-bind:class="['red-circle',{'display-none':li.IsUpdate==0}]"></span>
+				</div>
+				<div v-bind:class="['course-detail']">
+					<div v-bind:class="['courseName-button']">
+						<p v-bind:class="['course-name','single-line']">{{li.CourseName}}</p>
+						<button type="button" v-bind:class="['input-btn',{li.IsFocus?'btn-focused':'btn-unfocus'}]" v-on:tap.stop="toggleFocus(li)">{{li.IsFocus?"已关注":"关注"}}</button>
+					</div>
+					<p v-bind:class="['course-info','double-line']">{{li.SecName}}</p>
+				</div>
+			</div>
+		</li>
 		<!--下拉刷新容器-->
 		<div id="course-all" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':listData.length==0}">
 			<div class="mui-scroll">
